# GAR

./: .#README.md  Arithmetic.cc  Arithmetic.h  AsParse.cpp  AsParse.h  BasicType.h  Bit.cpp  Bit.h  Bit32.cpp  Bit32.h  CMakeLists.txt  Const.cpp  Const.h  LICENSE  Main.cpp  README.md  Role.h  SGCUtils.cpp  SGCUtils.h  log  server_config  zkassembler.cpp
analysis/: calc_plain_inst.cpp
baseline/EMP/: README.md
baseline/EMP/kmp/150-700/: prog.cpp
baseline/EMP/kmp/250-1500/: prog.cpp
baseline/EMP/kmp/50-400/: prog.cpp
baseline/EMP/kmp/500-7000/: prog.cpp
baseline/WGMK/: README.md  comp.sh  javajdkinstall  setup.sh  tc
baseline/WGMK/source_programs/: dijk.c  sparse_dij.c
baseline/WGMK/test/: TesMemory.java  TestCircuitOramRec.java
cryptographic_primitives/: Prf.cc  Prf.h  Prg.h  Sse2neon.h
epigram/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  foo.gc  scratch  test.gc  todo
epigram/estimate/: Main.hs  a.out  data.csv  disperse.cc  stack.cc
epigram/src/: arithmetic.cc  arithmetic.h  bit.cc  bit.h  bitstring.cc  bitstring.h  byte.cc  byte.h  cpu.cc  cpu.h  epigram.cc  epigram.h  label.h  lazypermutation.h  lazypermutation.hh  linearscan.cc  linearscan.h  main.cc  mode.cc  mode.h  onehot.cc  onehot.h  permute.cc  permute.h  prf.h  prg.h  resource.cc  resource.h  simplestack.cc  simplestack.h  stack.cc  stack.h  test.h  util.h  word.h
generateinput/: a.out  dj.cpp  output  xxx
testcase/: binarysearch.s  bs5.input  bubblesort.s  bubblesort.s.analysis  dijbackup.s  dijbackup.s~  dijkstra.s  dijkstraopt.s  dijkstraopt.s~  dijrewrite.s  djsample.input  gcd.s  gcd.s.analysis  kmp.cpp  kmp.s  kmp0.input  optbubblesort.s  psi1024.s~  psi_one.s~  sort.input
testcase/psi/256/: alice.in
testcase/psi/512/: alice.in  bob.in
testcase/psi/64/: alice.in
testinginputs/dij/: prog.s
testinginputs/dij/100/: alice.in  bob.in  plain  res  resnew
testinginputs/dij/40/: alice.in  bob.in  plain  res
testinginputs/dij/60/: alice.in  bob.in  plain  res  resnew
testinginputs/dij/80/: alice.in  bob.in  plain  res  resnew
testinginputs/dij/sample/: alice.in  bob.in
testinginputs/kmp/: prog.s
testinginputs/kmp/10-1500/: alice.in  bob.in  res
testinginputs/kmp/10-16000/: alice.in  bob.in
testinginputs/kmp/10-300/: alice.in  bob.in  res
testinginputs/kmp/10-7000/: alice.in  bob.in  res
testinginputs/kmp/150-700/: emp_cir  plain  prog.s  res
testinginputs/kmp/250-1500/: emp_cir  prog.s
testinginputs/kmp/50-1500/: alice.in  bob.in  res
testinginputs/kmp/50-16000/: alice.in  bob.in
testinginputs/kmp/50-300/: alice.in  bob.in  res
testinginputs/kmp/50-400/: emp_cir  plain  prog.s  res
testinginputs/kmp/50-7000/: alice.in  bob.in  res
testinginputs/kmp/500-7000/: emp_cir  prog.s
testinginputs/kmp/sample/: alice.in  bob.in
testinginputs/kmp_new/150-700/: alice.in  bob.in
testinginputs/kmp_new/250-1500/: alice.in  bob.in  plain  res
testinginputs/kmp_new/50-400/: alice.in  bob.in
testinginputs/kmp_new/500-7000/: alice.in  bob.in  plain  res
testinginputs/psi/1024/: alice.in  bob.in  plain  prog.s  res
testinginputs/psi/256/: bob.in  plain  prog.s  res
testinginputs/psi/64/: bob.in  plain  prog.s  res
(+13 files in other folders)
